Added rules to tournaments
